 - [web] fixed handling of collapsed/expanded mail accounts (#4541)
 - [web] fixed handling of duplicate recipients (#4597)
 - [web] fixed folder export when XSRF validation is enabled (#4502)
 - [web] don't encode filename extension when exporting folders
 - [core] don't always fetch the sorting columns
 - [eas] strip '<>' from bodyId and when forwarding mails

4.0.4 (2018-10-23)
------------------

Bug fixes
 - [web] fixed time conflict validation when not the owner
 - [web] fixed freebusy display with default theme (#4578)

4.0.3 (2018-10-17)
------------------

Enhancements
 - [web] prohibit subscribing a user with no rights
 - [web] new button to mark a task as completed (#4531)
 - [web] new button to reset Calendar categories to defaults
 - [web] moved the unseen messages count to the beginning of the window's title (#4553)
 - [web] allow export of calendars subscriptions (#4560)
 - [web] hide compose button when reading message on mobile device
 - [web] updated Angular to version 1.7.5
 - [web] updated CKEditor to version 4.10.1

Bug fixes
 - [web] include mail account name in form validation (#4532)
 - [web] calendar properties were not completely reset on cancel
 - [web] check ACLs on address book prior to delete cards
 - [web] fixed condition of copy action on cards
 - [web] fixed display of notification email in calendar properties
 - [web] fixed display of multi-days events when some weekdays are disabled
 - [web] fixed synchronisation of calendar categories
 - [web] fixed popup window detection in message viewer (#4518)
 - [web] fixed behaviour of return receipt actions
 - [web] fixed freebusy information with all-day events
 - [web] fixed support for SOGoMaximumMessageSizeLimit
 - [core] fixed email reminders support for tasks
 - [core] fixed time conflict validation (#4539)

4.0.2 (2018-08-24)
------------------

New features
 - [web] move mailboxes (#644, #3511, #4479)

Enhancements